Fix: avoid the problem of too long images

--- a/content/content.css
+++ b/content/content.css
@@ -12,4 +12,7 @@
 
 .block {
 	width: 50px;
+	height: 50px;
+	object-fit: cover;
+	object-position: top;
 }
